--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.8",
+        "illuminate/mail": "*",
         "laravel/framework": "^10.10",
+        "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.4",
+        "mailgun/mailgun-php": "^4.1",
+        "symfony/http-client": "^7.0",
+        "symfony/mailer": "^6.4",
+        "symfony/mailgun-mailer": "^7.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
